gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenants-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: a4820da556a4b405e8db3b455d0dd078-2002981340.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /tenant-one(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mt-app-service-tenant-one
                port:
                  number: 80
          - path: /tenant-two(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: mt-app-service-tenant-two
                port:
                  number: 80
